<resources>
    <string name="app_name">WasteCollectionProject</string>
    <string name="email">नाम</string>
    <string name="contact">फ़ोन नंबर</string>
    <string name="textLogin">कृपया लॉगिन करें</string>
    <string name="textnewAccount">नया खाता बनाएंं</string>
    <string name="Address">आपकी जगह</string>
    <string name="Register"> रजिस्टर करें</string>
    <string name="textRegister"> अपना नया खाता बनाएँ</string>
    <string name="wait">  कृपया प्रतीक्षा करें</string>
    <string name="AdminLogin">एडमिन लॉगिन</string>
    <string name="textOTP">OTP की प्रतीक्षा करें...</string>
    <string name="OTP">स्वचालित रूप से नहीं भरे जाने पर कोड दर्ज करें</string>
    <string name="otp">OTP दर्ज करें</string>
    <string name="signin">साइन इन करें</string>
    <string name="warning">आपकी प्रतिक्रिया दर्ज की जाएगी</string>
    <string name="Yes">हाँ</string>
    <string name="No">नहीं</string>
    <string name="info">क्या आपका कल का कचरा  संबंधित अधिकारियों द्वारा एकत्र किया गया है?</string>
    <string name="info2">क्या आप अपने स्थान पर पहुँच गए हैं?</string>

    <string name="MAPS_API">AIzaSyATOenPt0e4POyDtMmzKnp3zICZPFHG2ZQ</string>


    <string name="dashboard">संदेश प्रतिक्रिया</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="about_info">about_info</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">dashboard_fragment</string>
    <string name="my_favourites">MY FAVOURITES</string>


    <string name="infor">इस ऐप का उद्देश्य कुछ नामित क्षेत्रों में एक परियोजना चलाना और वास्तविक ऐप का उपयोग करने के लिए आपकी स्वीकार्यता और इच्छा का अध्ययन करना है। यह ऐप आपका स्थान प्राप्त करेगा और संबंधित अधिकारियों को आपके क्षेत्र से कचरा एकत्र करने में मदद करेगा  एप्लिकेशन का उपयोग करने के लिए निर्देश साइन इन करने के बाद आपको हर 24 घंटे पर एक सूचना दी जाती है, जिसके लिए आपको हां या ना में क्लिक करके जवाब देना होता है कि आपका कचरा अधिकारियों द्वारा एकत्र किया गया है या नहीं
आपके सहयोग के लिए धन्यवाद।      </string>


</resources>
