<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fff">


<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waste"
    android:alpha="0.2"> </ImageView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginStart="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="25dp"
            android:paddingRight="25dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/info"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold">


            </TextView>

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/positive_response_button"
                android:padding="2dp"
                android:text="@string/Yes"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/negative_response_button"
                android:padding="2dp"
                android:text="@string/No"
                android:textSize="20sp" />


            <TextView

                android:id="@+id/admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="#000"
                android:textSize="15dp" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">


        <ProgressBar
            android:id="@+id/progressBar6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>








</RelativeLayout>


















